--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -3,14 +3,17 @@
     flex-direction: column;
     width: 400px;
 }
-.welcome{
+
+.welcome {
     font-size: 1.3em;
     text-align: center;
+    font-style: oblique;
 }
 
-.card{
+.card {
     border-radius: 15px !important;
 }
-.btnLogin{
+
+.btnLogin {
     margin-top: 30px;
 }
